k8s/authentication-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
  namespace: zylkerkart
spec:
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      nodeSelector:
        role: app
      containers:
      - name: authentication-service
        image: impazhani/zylkerkart-authentication-service:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
        ports:
        - containerPort: 7000
        volumeMounts:
        - name: s247agent
          mountPath: /home/apm
      volumes:
      - name: s247agent
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  namespace: zylkerkart
spec:
  selector:
    app: authentication-service
  ports:
    - protocol: TCP
      port: 7000
      targetPort: 7000
