k8s/common-data-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: common-data-service
  namespace: zylkerkart
spec:
  replicas: 2
  selector:
    matchLabels:
      app: common-data-service
  template:
    metadata:
      labels:
        app: common-data-service
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - common-data-service
              topologyKey: "kubernetes.io/hostname"
      nodeSelector:
        role: app
      containers:
      - name: common-data-service
        image: impazhani/zylkerkart-common-data-service:latest
        imagePullPolicy: Always
        resources:
          limits:
            cpu: "1000m"
            memory: "1024Mi"
          requests:
            cpu: "500m"
            memory: "512Mi"
        ports:
        - containerPort: 9000
        volumeMounts:
        - name: s247agent
          mountPath: /home/apm
      volumes:
      - name: s247agent
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: common-data-service
  namespace: zylkerkart
spec:
  selector:
    app: common-data-service
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
