k8s/load-generator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zylkerkart-loadgen
  namespace: site24x7-operator
  labels:
    app: zylkerkart-loadgen
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zylkerkart-loadgen
  template:
    metadata:
      labels:
        app: zylkerkart-loadgen
    spec:
      containers:
      - name: k6
        image: impazhani/zylkerkart-loadgen:v3-agent
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: "500m"
            memory: "512Mi"
          requests:
            cpu: "250m"
            memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: zylkerkart-loadgen
  namespace: site24x7-operator
spec:
  selector:
    app: zylkerkart-loadgen
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
