k8s/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-db
  namespace: zylkerkart # Using default for simplicity in K3s demo
spec:
  selector:
    matchLabels:
      app: mysql-db
  template:
    metadata:
      labels:
        app: mysql-db
    spec:
      nodeSelector:
        role: db-mysql
      tolerations:
        - key: "dedicated"
          operator: "Equal"
          value: "mysql"
          effect: "NoSchedule"
      containers:
      - name: mysql-db
        image: mysql:8
        ports:
        - containerPort: 3306
        volumeMounts:
        - name: mysql-init
          mountPath: /docker-entrypoint-initdb.d/user.sql
          subPath: user.sql
      volumes:
      - name: mysql-init
        configMap:
          name: mysql-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-db
  namespace: zylkerkart
spec:
  selector:
    app: mysql-db
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
