k8s/payment-gateway-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-gateway-service
  namespace: zylkerkart
spec:
  selector:
    matchLabels:
      app: payment-gateway-service
  template:
    metadata:
      labels:
        app: payment-gateway-service
    spec:
      nodeSelector:
        role: app
      containers:
      - name: payment-gateway-service
        image: impazhani/zylkerkart-payment-gateway-service:eks-v2
        imagePullPolicy: Always
        ports:
        - containerPort: 9050
---
apiVersion: v1
kind: Service
metadata:
  name: payment-gateway-service
  namespace: zylkerkart
spec:
  selector:
    app: payment-gateway-service
  ports:
    - protocol: TCP
      port: 9050
      targetPort: 9050
