k8s/react-ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-ui
  namespace: zylkerkart
spec:
  selector:
    matchLabels:
      app: react-ui
  template:
    metadata:
      labels:
        app: react-ui
    spec:
      containers:
      - name: react-ui
        image: impazhani/zylkerkart-react-ui:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: react-ui
  namespace: zylkerkart
spec:
  selector:
    app: react-ui
  type: LoadBalancer # In K3d this maps to localhost
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
