k8s/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-cache
  namespace: zylkerkart
spec:
  selector:
    matchLabels:
      app: redis-cache
  template:
    metadata:
      labels:
        app: redis-cache
    spec:
      containers:
      - name: redis-cache
        image: redis:alpine
        command: ["redis-server", "--requirepass", "mypass"]
        ports:
        - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-cache
  namespace: zylkerkart
spec:
  selector:
    app: redis-cache
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
