k8s/site24x7-proxy.yaml
apiVersion: v1
kind: Service
metadata:
  name: site24x7-sim-proxy
  namespace: zylkerkart
spec:
  type: ExternalName
  externalName: site24x7-sim.site24x7-operator.svc.cluster.local
  ports:
  - port: 80
    targetPort: 80
