k8s/site24x7-sim.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: site24x7-operator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: site24x7-sim
  namespace: site24x7-operator
  labels:
    app: site24x7-sim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: site24x7-sim
  template:
    metadata:
      labels:
        app: site24x7-sim
    spec:
      serviceAccountName: site24x7-sim-sa
      containers:
      - name: site24x7-sim
        image: impazhani/site24x7-sim:v20
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: site24x7-sim
  namespace: site24x7-operator
spec:
  selector:
    app: site24x7-sim
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8000
