k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zylkerkart-ingress
  namespace: zylkerkart
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:

  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: authentication-service
                port:
                  number: 7000
          - path: /api/payment(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: payment-gateway-service
                port:
                  number: 9050
          - path: /api/common(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: common-data-service
                port:
                  number: 9000
          - path: /api/search(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: search-suggestion-service
                port:
                  number: 10000
          - path: /site24x7(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: site24x7-sim-proxy
                port:
                  number: 80
          - path: /site24x7operator(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: site24x7-sim-proxy
                port:
                  number: 80
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: react-ui
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: site24x7-sim-proxy
  namespace: zylkerkart
spec:
  type: ExternalName
  externalName: site24x7-sim.site24x7-operator.svc.cluster.local
